--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -27,6 +27,19 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 .popup-buttons 
 */
 
+ul
+{
+list-style-type: none;
+margin: 0; 
+padding: 0;
+}
+
+li
+{
+list-style-type: none;
+margin: 0; 
+padding: 0;
+}
 
 
 html, body {
