--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -37,18 +37,18 @@ html, body {
   margin-left: 30% !important;
   width: 300px !important;
 
-  background-color: #28BECC !important;
+  background-color: #29BECC !important;
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
 }
 
 
 .popup-title {
-  text-align: center !important;
-  font-family: 'roboto', sans-serif !important;
-  font-weight: 40px !important;
+  text-align: center !important;  
+  font-family: 'Open Sans', sans-serif !important;
+  font-weight:400 !important;
   font-size: 24px !important;
   padding-top: 15px !important;
-  color:white;
+  color:#FCFEFF;
   border-radius: 3px !important;
 
 }
@@ -56,17 +56,18 @@ html, body {
 .popup-body{
 
   height: 20px !important;
-  font-size:10px !important;
-  font-family: 'roboto', sans-serif !important;
+  font-family: 'Open Sans', sans-serif !important;
+  font-weight:400 !important;
   text-align: center !important;
   margin: auto !important;
 
 }
 
 .popup-buttons .button{
-   font-family: 'roboto', sans-serif;
+   font-family: 'Open Sans', sans-serif !important;
+  font-weight:400 !important;
   transition: transform 0.2s cubic-bezier(0.64, 0.09, 0.08, 1), box-shadow 0.2s cubic-bezier(0.64, 0.09, 0.08, 1);
-  background: white;
+  background: #FCFEFF;
   cursor: pointer;
   width: 200px;
   color: black;
@@ -89,21 +90,25 @@ html, body, form, span, h1 {
 
 h1 {
   width: 100%;
-  background: #28BECC;
+  background: #29BECC;
   text-align: center;
   padding: 20px;
-  color: white;
+  color: #FCFEFF;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.05);
+  font-weight:200 !important;
  }
 
 form {
-  font-family: 'roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-weight:200 !important;
   width: 460px;
-  margin: 100px auto 0;
+  margin: 250px auto 0;
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
   padding: 0 0 40px;
-  color: #555;
-  background: url(../img/form.jpg) center center fixed; }
+  color: #FCFEFF;
+  background: #FCFEFF;
+  /*background: url(../img/form.jpg) center center fixed; */
+}
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
@@ -112,8 +117,10 @@ textarea::-webkit-input-placeholder {
 
 input,
 textarea {
-  font: inherit;
-  font-size: 0.8em;
+  font-family: 'Open Sans', sans-serif;
+  font-weight:400;
+  font-size: 16;
+  color:#303840;
   margin: 28px 25px 10px;
   width: 400px;
   display: block;
@@ -129,7 +136,7 @@ textarea {
   overflow: hidden; }
   input:focus::-webkit-input-placeholder,
   textarea:focus::-webkit-input-placeholder {
-    color: #28BECC; }
+    color: #29BECC; }
   input:focus, input:valid,
   textarea:focus,
   textarea:valid {
@@ -151,10 +158,11 @@ textarea {
     line-height: 120%; }
 
 button {
-  font-family: 'roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
   transition: transform 0.2s cubic-bezier(0.64, 0.09, 0.08, 1), box-shadow 0.2s cubic-bezier(0.64, 0.09, 0.08, 1);
   border: none;
-  background: #28BECC;
+  background: #29BECC;
   cursor: pointer;
   padding: 6px;
   width: 400px;
@@ -169,7 +177,7 @@ a {
   width: 42px;
   height: 42px;
   border-radius: 50px;
-  background: #28BECC;
+  background: #29BECC;
   display: inline-block;
   margin: 50px calc(50% - 21px);
   white-space: nowrap;
