--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -126,8 +126,8 @@ textarea {
   display: block;
   border: none;
   padding: 20px 0 10px;
-  border-bottom: solid 1px #28BECC;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #28BECC 4%);
+  border-bottom: solid 1px #29BECC;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #29BECC 4%);
   background-position: -400px 0;
   background-size: 400px 100%;
   background-repeat: no-repeat;
@@ -219,7 +219,7 @@ padding: 0;
   color: #555;
   font: inherit;
   font-size: 1em;
-  margin: 28px 25px 10px;
+  margin: 60px 25px 10px;
   width: 715px;
   display: block;
   border: none;
@@ -261,7 +261,7 @@ padding: 0;
   color: white;
   width: 100px; 
   font-size: 1em;
-  margin: 0px 600px 10px;
+  margin: 20px 605px 0px;
 }
 
 .questionnaire-border
@@ -270,7 +270,7 @@ padding: 0;
   color: #555;
   font: inherit;
   font-size: 0.8em;
-  margin: 5px 25px 10px;
+  margin: 50px 25px 10px;
   width: 715px;
   display: block;
   border: none;
@@ -289,8 +289,8 @@ padding: 0;
   color: #555;
   font: inherit;
   font-size: 1em;
-  margin-top: .5px;
-  margin-bottom: .5px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   margin-right: .5px;
   margin-left: .5px;
   border: none;
@@ -305,6 +305,7 @@ padding: 0;
   overflow: hidden;
   height: 500px;
   overflow-y: scroll;
+  word-wrap: break-word;
   
 }
 .questionnaire-header
@@ -338,14 +339,37 @@ padding: 0;
 
 .nav-button
 {
+  font-family: 'Open Sans', sans-serif
   background: #FCFEFF;
   border: 2px solid #29BECC;
   width: 200px;
   font-size: 1em;
 }
 
-#container
+.signout
 {
-  height: 800px;
+  background-color: #29BECC;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  overflow: hidden;
+  border: 2px solid #FCFEFF;
+  width: 100px;
+  font-size: 1em;
+  height:50px;
+  margin: 0px 650px 0px;
+  
 }
 
+.form-title
+{
+  text-align: center !important;
+  background-color: #29BECC;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  overflow: hidden;
+  height: 75px;
+  line-height: 37.5px;
+  font-size: 3em;
+  margin-bottom: -63px;
+
+}
