--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -31,6 +31,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 html, body {
   background: url(../img/blurredoffice.jpg) center center fixed;
+  background-repeat:no-repeat;
   overflow-x: hidden;
   overflow-y: hidden; }
 
@@ -397,9 +398,7 @@ padding: 0;
 text-align: center !important;
 
 }
-.answers{
 
-}
 
 .review {
   font-family: 'Open Sans', sans-serif;
