--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -375,8 +375,7 @@ padding: 0;
   font-size: 10px !important;
   font-weight: bold !important;
   position: static !important;
-  margin: 400px 0 0 600px !important;
-  padding: 10px !important;
+ 
 }
 
 .md-subhead{
@@ -390,40 +389,58 @@ padding: 0;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.2s ease-in-out;
   padding-bottom: 20px;
+  width:50%;
+  margin: 0 auto !important; 
+  margin-bottom: 5% !important;
+  margin-top: 5% !important
 }
 .card-1:hover {
+
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    width:95%;
+    margin: 0 auto !important; 
+    margin-bottom: 5% !important;
+    margin-top: 5% !important;
 }
 .questions {
 text-align: center !important;
 
+}
+.buttons{
+  margin: auto !important;
 }
 
 
 .review {
   font-family: 'Open Sans', sans-serif;
   font-weight:200 !important;
-  width: 460px;
-  margin: 100px auto 0 !important;
+  
+  margin: 0 auto !important; 
+  width: 75% !important;
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
   color: #FCFEFF;
   background: #FCFEFF;
   overflow-x: hidden; 
   height: 850px !important;
-  padding-bottom: 20px;
   overflow-y: scroll !important ;
   /*background: url(../img/form.jpg) center center fixed; */
 }
 .reviewHeader {
  font-family: 'Open Sans', sans-serif;
   font-weight:200 !important;
-  width: 460px;
-  margin: 100px auto 0 !important;
+  margin-top: 50px !important;
+  margin: 0 auto !important; 
+  width: 75% !important;
+  height: 60px !important;
   color: #FCFEFF;
   font-size: 3em;
   text-align: center;
   background: #29BECC;
 }
 
+.section.edit{
+  padding-right:5% !important;
+  padding-left: 5% !important;
+}
 
 
