Changed background image to purchased stock photo

--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -30,7 +30,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 
 html, body {
-  background: url(../img/blurredoffice.jpg) center center fixed;
+  background: url(../img/blurredhospital.jpg) center center fixed;
   background-repeat:no-repeat;
   overflow-x: hidden;
   overflow-y: hidden; }
