--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -33,7 +33,9 @@ html, body {
   background: url(../img/blurredhospital.jpg) center center fixed;
   background-repeat:no-repeat;
   overflow-x: hidden;
-  overflow-y: hidden; }
+  overflow-y: hidden; 
+
+}
 
 .md-fab{
 
@@ -380,22 +382,30 @@ padding: 0;
   background-color: #29BECC;
   font-family: 'Open Sans', sans-serif;
   color: #FCFEFF;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !important;
   transition: all 0.2s ease-in-out;
   padding-bottom: 20px;
   width:50%;
   margin: 0 auto !important; 
   margin-bottom: 5% !important;
-  margin-top: 5% !important
+  margin-top: 5% !important;
+  position: relative;
+  width:95% !important;
 }
-.card-1:hover {
 
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-    width:95%;
-    margin: 0 auto !important; 
-    margin-bottom: 5% !important;
-    margin-top: 5% !important;
-}
+/*
+.card-1:hover {
+   
+
+}*/
+
+.card-1:hover .card-1:not(:hover) {
+ 
+ pointer-events:none;
+
+} 
+
+
 .questions {
 text-align: center !important;
 
@@ -417,6 +427,7 @@ text-align: center !important;
   overflow-x: hidden; 
   height: 850px !important;
   overflow-y: scroll !important ;
+  position: relative;
   /*background: url(../img/form.jpg) center center fixed; */
 }
 .reviewHeader {
@@ -436,6 +447,5 @@ text-align: center !important;
   padding-right:5% !important;
   padding-left: 5% !important;
 }
-
 
 
