added darker color to % complete lines, circular loading for questionnaire to load, boolean logic to wait to show close button, and made next/previous/review buttons fixed to bottom right

--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -53,6 +53,18 @@ html, body {
 
 }
 
+.position-bottom-right{
+  position: fixed;
+  right:    5.1%;
+  bottom:   .7em;
+  background-color: white;
+  width: 90.2%;
+}
+
+.radio-height{
+  height: 1em;
+}
+
 .has-error{
   color:#DC143C;
 }
