--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -445,6 +445,8 @@ button.button.button-rounded.fab {
     z-index: 200 !important;
 }
 
+
+
 .md-subhead{
   text-align: center;
 }
@@ -473,13 +475,8 @@ button.button.button-rounded.fab {
   height: 40% !important;
 }
 
-.animate-show {
-  line-height: 20px;
-  opacity: 1;
-  padding: 10px;
-  border: 1px solid black;
-
-height: 80% !important;
+.check-element .animate-show {
+height: 400px !important;
 overflow-y: scroll !important ;
 overflow-x: hidden !important ;
 }
@@ -494,28 +491,30 @@ overflow-x: hidden !important ;
   line-height: 0;
   padding: 0 10px;
 }
-
+.checkbox{
+  height:50% !important;
+}
 .check-element {
   padding: 10px;
   border: 1px solid black;
-  
-height: 80% !important;
-overflow-y: scroll !important ;
-overflow-x: hidden !important ;
+  height: 30% !important;
+  overflow-y: scroll !important ;
+  overflow-x: hidden !important ;
 }
 
 .questions {
 text-align: center !important;
-height: 80% !important;
-overflow-y: scroll !important ;
+height: 30% !important;
+overflow-y: hidden !important ;
 overflow-x: hidden !important ;
-
-
+padding-left: 4% !important;
 }
 
 .questionSection{
  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !important;
   transition: all 0.2s ease-in-out;
+  overflow-y: scroll !important ;
+overflow-x: hidden !important ;
 
 
 }
@@ -549,6 +548,32 @@ overflow-x: hidden !important ;
   font-size: 3em;
   text-align: center;
   background: #29BECC;
+}
+
+.submit{
+ position: absolute !important;
+ top: 80% !important;
+ left: 70% !important;
+ margin: 0% !important;
+ z-index: 200 !important;
+  background-color: #29BECC;;
+  display: block !important;
+  width: 90px !important;
+  height: 50px !important;
+  line-height: 30px !important;
+  border: 2px solid white !important;
+  color: white !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  font-size: 20px !important;
+  padding: 0px !important;
+  font-family: 'Open Sans', sans-serif;
+  font-weight:400 !important;
+ 
+}
+  
+ 
+
 }
 
 .section.edit{
