--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -468,7 +468,7 @@ padding: 0;
 button.button.button-rounded.fab {
     position: absolute !important;
     top: 7% !important;
-    left: 70% !important;
+    left: 5% !important;
     margin: 0% !important;
     z-index: 200 !important;
 }
@@ -605,9 +605,29 @@ overflow-x: hidden !important ;
   padding: 0px !important;
   font-family: 'Open Sans', sans-serif;
   font-weight:400 !important;
- 
 }
   
+  .submit2{
+  background-color: green;
+  width: 50px !important;
+  height: 50px !important;
+  line-height: 30px !important;
+  border: 2px solid white !important;
+  border-radius: 50% !important;
+  color: white !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  font-size: 10px !important;
+  font-weight: bold !important;
+  padding: 0px !important;
+  position: absolute !important;
+ top: 7% !important;
+ left: 90% !important;
+ margin: 0% !important;
+ z-index: 200 !important;
+ 
+ 
+}
  
 .outer{
   height:90%;
