green toast and new submit button

--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -629,6 +629,15 @@ overflow-x: hidden !important ;
  
 }
  
+body > ui-view > ui-view > div.outer > button.btn.waves-effect.waves-light
+{
+  position:absolute  !important;
+left: 70% !important;
+z-index: 200 !important;
+top: 8% !important;
+background-color:#29BECC;
+  }
+
 .outer{
   height:90%;
   overflow-y:scroll !important;
@@ -640,3 +649,6 @@ overflow-x: hidden !important ;
 }
 
 
+md-toast.md-success-toast-theme .md-toast-content {
+    background-color: green;
+}
