--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -471,6 +471,7 @@ button.button.button-rounded.fab {
     left: 5% !important;
     margin: 0% !important;
     z-index: 200 !important;
+    background-color: red;
 }
 
 
@@ -586,48 +587,7 @@ overflow-x: hidden !important ;
   background: #29BECC;
 }
 
-.submit{
- position: absolute !important;
- top: 80% !important;
- left: 70% !important;
- margin: 0% !important;
- z-index: 200 !important;
-  background-color: #29BECC;;
-  display: block !important;
-  width: 90px !important;
-  height: 50px !important;
-  line-height: 30px !important;
-  border: 2px solid white !important;
-  color: white !important;
-  text-align: center !important;
-  text-decoration: none !important;
-  font-size: 20px !important;
-  padding: 0px !important;
-  font-family: 'Open Sans', sans-serif;
-  font-weight:400 !important;
-}
-  
-  .submit2{
-  background-color: green;
-  width: 50px !important;
-  height: 50px !important;
-  line-height: 30px !important;
-  border: 2px solid white !important;
-  border-radius: 50% !important;
-  color: white !important;
-  text-align: center !important;
-  text-decoration: none !important;
-  font-size: 10px !important;
-  font-weight: bold !important;
-  padding: 0px !important;
-  position: absolute !important;
- top: 7% !important;
- left: 90% !important;
- margin: 0% !important;
- z-index: 200 !important;
- 
- 
-}
+
  
 body > ui-view > ui-view > div.outer > button.btn.waves-effect.waves-light
 {
@@ -635,7 +595,7 @@ body > ui-view > ui-view > div.outer > button.btn.waves-effect.waves-light
 left: 70% !important;
 z-index: 200 !important;
 top: 8% !important;
-background-color:#29BECC;
+background-color:green;
   }
 
 .outer{
