--- a/App/www/css/ionic.app.css
+++ b/App/www/css/ionic.app.css
@@ -284,9 +284,9 @@ padding: 0;
   height: 800px;
 }*/
 
-.incomplete-button
+.md-button.incomplete-button
 {
-  background-color: #ee3900;
+  background-color: #ee3900 !important;;
   font-family: 'Open Sans', sans-serif;
   color: white;
   overflow: hidden;
@@ -294,9 +294,9 @@ padding: 0;
   font-size: 1em;
 }
 
-.complete-button
+.md-button.complete-button
 {
-  background-color: #29BECC;
+  background-color: #29BECC !important;;
   font-family: 'Open Sans', sans-serif;
   color: white;
   overflow: hidden;
@@ -397,9 +397,9 @@ padding: 0;
   padding-top: 0px !important;
 }
 
-.review-button
+.md-button.review-button
 {
-  background-color: #29BECC;
+  background-color: #29BECC !important;
   font-family: 'Open Sans', sans-serif;
   color: white;
   overflow: hidden;
@@ -408,10 +408,10 @@ padding: 0;
   font-size: 1em;
 }
 
-.nav-button
+.md-button.nav-button
 {
   font-family: 'Open Sans', sans-serif
-  background: #FCFEFF;
+  background: #FCFEFF !important;
   border: 2px solid #29BECC;
   width: 200px;
   font-size: 1em;
